# sciencecalc-rs

./: Cargo.toml  DOKUMENTASI.md  README.md
dokumentasi/: aljabar.md
dokumentasi/fisika/: energi.md  gaya.md  gerak.md  listrik.md
dokumentasi/kimia/: gas.md  larutan.md  reaksi.md  stoikiometri.md
dokumentasi/matematika/: aljabar.md  aritmetika.md  basis.md  geometri.md  kombinatorika.md  statistika.md
dokumentasi/math/: aljabar.md  aritmetika.md  basis.md  geometri.md  kombinatorika.md  statistika.md  trigonometri.md
src/: lib.rs  main.rs
src/chemistry/: gas.rs  larutan.rs  mod.rs  reaction.rs  reaksi.rs  solution.rs  stoichiometry.rs
src/examples/: chemistry_examples.rs  math_examples.rs  physics_examples.rs
src/fisika/: gaya.rs  listrik.rs  mod.rs
src/kimia/: gas.rs  stoikiometri.rs
src/matematika/: aljabar.rs  aritmetika.rs  geometri.rs  kombinatorika.rs  mod.rs  statistika.rs
src/math/: algebra.rs  aljabar.rs  basis.rs  geometri.rs  linear.rs  matrix.rs  mod.rs  quadratic.rs  statistics.rs  statistik.rs  trigonometri.rs  trigonometry.rs
src/physics/: electricity.rs  energi.rs  energy.rs  force.rs  gerak.rs  motion.rs
